# stdoutisatty

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.rst  autoclean.sh  autogen.sh  configure.ac  libstdoutisatty.c  stdoutisatty.c
